5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1675_1950.log
== TEST (2019-04-30 12:36:28) 
-- CODE:
temp=float(input())
v=flaot(input())
if( temp>-50 and temp<10):
		if:(v>4.8):				
			sens=13.12+0.6215*temp-(11.37*v**0.16)+(0.3965*temp*v**0.16)
			print(round(sens,4))
		else:
			print("Velocidade invalida")
else:
	print("Temperatura invalida")
-- ERROR:
File "XXXX", line 4
    if:(v>4.8):				
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:36:59) 
-- CODE:
temp=float(input())
v=flaot(input())
if( temp>-50 and temp<10):
		if(v>(4.8):				
			sens=13.12+0.6215*temp-(11.37*v**0.16)+(0.3965*temp*v**0.16)
			print(round(sens,4))
		else:
			print("Velocidade invalida")
else:
	print("Temperatura invalida")
-- ERROR:
File "XXXX", line 4
    if(v>(4.8):				
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:37:10) 
-- CODE:
temp=float(input())
v=flaot(input())
if( temp>-50 and temp<10):
		if(v>(4.8)):				
			sens=13.12+0.6215*temp-(11.37*v**0.16)+(0.3965*temp*v**0.16)
			print(round(sens,4))
		else:
			print("Velocidade invalida")
else:
	print("Temperatura invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v=flaot(input())
NameError: name 'flaot' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 12:37:14) 
-- CODE:
temp=float(input())
v=flaot(input())
if( temp>-50 and temp<10):
		if(v>(4.8)):				
			sens=13.12+0.6215*temp-(11.37*v**0.16)+(0.3965*temp*v**0.16)
			print(round(sens,4))
		else:
			print("Velocidade invalida")
else:
	print("Temperatura invalida")
-- EXECUTION TIME:
0.194529
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1675/1950/main.py", line 2, in <module>
    v=flaot(input())
NameError: name 'flaot' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:37:17) 
-- CODE:
temp=float(input())
v=flaot(input())
if( temp>-50 and temp<10):
		if(v>(4.8)):				
			sens=13.12+0.6215*temp-(11.37*v**0.16)+(0.3965*temp*v**0.16)
			print(round(sens,4))
		else:
			print("Velocidade invalida")
else:
	print("Temperatura invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    v=flaot(input())
NameError: name 'flaot' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 12:37:38) 
-- CODE:
temp=float(input())
v=float(input())
if( temp>-50 and temp<10):
		if(v>(4.8)):				
			sens=13.12+0.6215*temp-(11.37*v**0.16)+(0.3965*temp*v**0.16)
			print(round(sens,4))
		else:
			print("Velocidade invalida")
else:
	print("Temperatura invalida")
-- OUTPUT:
Temperatura invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 12:37:52) 
-- CODE:
temp=float(input())
v=float(input())
if( temp>-50 and temp<10):
		if(v>(4.8)):				
			sens=13.12+0.6215*temp-(11.37*v**0.16)+(0.3965*temp*v**0.16)
			print(round(sens,4))
		else:
			print("Velocidade invalida")
else:
	print("Temperatura invalida")
-- EXECUTION TIME:
0.205333
-- TEST CASE 1:
---- input:
20
9
---- correct output:
Temperatura invalida
---- user output:
Temperatura invalida
-- TEST CASE 2:
---- input:
-5
4
---- correct output:
Velocidade invalida
---- user output:
Velocidade invalida
-- TEST CASE 3:
---- input:
-5
50
---- correct output:
-14.9563
---- user output:
-14.9563
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
